# types

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  demo_ip.cpp
include/extend/: niceties.h  power_enum.h
include/network/: ip.h
lib/network/: ip.cpp
tests/: CMakeLists.txt  test_ip.cpp
